--- a/packages/client/src/components/add-liquidity/add-liquidity-v3.scss
+++ b/packages/client/src/components/add-liquidity/add-liquidity-v3.scss
@@ -8,35 +8,121 @@
     p {
         margin-bottom: 1rem;
     }
-    // justify-content: space-between;
-    // font-family: 'Barlow Condensed';
-    // }
 
-    // .dropdown {
-    //     outline: none;
-    //     .btn-primary {
-    //         background: var(--bgSecondary);
-    //         border: 1px solid var(--bgDeep);
-    //         &:focus {
-    //             outline: none;
-    //             box-shadow: none;
-    //             border: 1px solid var(--borderAccentAlt);
-    //         }
-    //     }
-    // }
-    // .dropdown-menu {
-    //     // border: 1px solid red;
-    //     border-radius: 0;
-    //     background: var(--bgSecondary);
-    //     .dropdown-item {
-    //         color: var(--faceSecondary);
-    //         &.active,
-    //         &:hover {
-    //             color: var(--facePrimary);
-    //             background: var(--bgAccent);
-    //         }
-    //     }
-    // }
+    .pool-info {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .pool-pairs {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+
+        &-item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-left: 15px;
+            margin-right: 15px;
+
+            img {
+                width: 50px;
+            }
+            .no-image {
+                display: inline-block;
+            }
+            .no-image:after {
+                content: '🍇';
+                font-size: 50px;
+            }
+        }
+
+        &-name {
+            font-size: 30px;
+            color: #fff;
+            line-height: 36px;
+            padding-top: 7px;
+        }
+    }
+
+    .pool-details {
+        flex: 1;
+        color: white;
+        font-size: 15px;
+        line-height: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        font-weight: bold;
+        width: 50%;
+        margin-bottom: 20px;
+
+        &-row {
+            display: flex;
+            margin-top: 20px;
+        }
+
+        &-desc {
+            flex: 1;
+        }
+
+        &-value {
+            &.green {
+                color: #00FE81;
+            }
+        }
+    }
+
+    .pair-text {
+        color: #fff;
+        font-size: 12px;
+        line-height: 15px;
+        padding-top: 19.92px;
+        padding-bottom: 12px;
+        font-weight: bold;
+    }
+
+    .pair-action {
+        display: flex;
+        align-items: center;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        justify-content: space-between;
+
+        &-button {
+            background: none;
+            outline: none;
+            border: none;
+            box-sizing: border-box;
+            box-shadow: 0px 2.41383px 0px rgba(0, 0, 0, 0.25);
+            border-radius: 4.82766px;
+            border: 1.63987px solid #000000;
+            height: 44px;
+            width: 49%;
+            color: #fff;
+            font-size: 17.492px;
+            font-weight: bold;
+            line-height: 21px;
+            text-shadow: 0px 1.20692px 0px rgba(0, 0, 0, 0.25);
+            text-shadow: -1.2px 0 black, 0 1.2px black, 1.2px 0 black, 0 -1.2px black;
+
+            &.green {
+                background: linear-gradient(181.22deg, #71FFB9 -58.23%, #71FFB9 98.95%);
+            }
+
+            &.silver {
+                background: linear-gradient(181.22deg, #FFFFFF -58.23%, #D8D6E5 98.95%);
+            }
+        }
+
+        img {
+            width: 100%;;
+        }
+    }
 
     .token-and-wallet {
         padding: 1rem;
@@ -174,7 +260,6 @@
     }
 
     .sentiment {
-        background: var(--bgDefault);
         padding: 0.75rem;
         border-radius: 4px;
         > div {
@@ -232,11 +317,7 @@
     }
 
     .token-control-container {
-        // border: 1px solid var(--borderSecondary);
-        padding: 0.75rem 0.75rem;
-        background: var(--bgDefault);
         border-radius: 4px;
-        padding-bottom: 0;
         > div {
             margin-bottom: 0.75rem;
         }
@@ -259,6 +340,7 @@
             border-top-right-radius: 0;
         }
     }
+
     .token-select {
         border: 1px solid var(--borderDefault);
         border-radius: 4px;
@@ -278,25 +360,26 @@
         // background: linear-gradient(var(--objPrimary), var(--objDefault));
         background: var(--objPrimary);
     }
-    // .token-input-control {
-    //     border: 1px solid var(--borderDefault);
-    // }
-    // .token-input-control.active {
-    //     // border: 1px solid var(--objPositiveAlt);
-    //     border-radius: 4px;
-    //     // background: var(--bgDeep);
-    //     background: linear-gradient(var(--objPrimary), var(--objDefault));
-    // }
-    // .token-input-control.inactive {
-    //     border: 1px solid var(--borderDefault);
-    //     border-radius: 4px;
-    //     background: var(--objDefault);
-    // }
-    // .token-input-control.disable {
-    //     border: 1px solid var(--objDisabledAlt);
-    //     border-radius: 4px;
-    //     background: var(--objDisabled);
-    // }
+
+    .token-input-control {
+        border: 1px solid var(--borderDefault);
+    }
+    .token-input-control.active {
+        // border: 1px solid var(--objPositiveAlt);
+        border-radius: 4px;
+        // background: var(--bgDeep);
+        background: linear-gradient(var(--objPrimary), var(--objDefault));
+    }
+    .token-input-control.inactive {
+        border: 1px solid var(--borderDefault);
+        border-radius: 4px;
+        background: var(--objDefault);
+    }
+    .token-input-control.disable {
+        border: 1px solid var(--objDisabledAlt);
+        border-radius: 4px;
+        background: var(--objDisabled);
+    }
 
     .token-with-logo {
         display: inline-flex;
@@ -321,12 +404,51 @@
     }
 
     .token-input {
-        background: var(--bgDeep);
+        // background: var(--bgDeep);
         padding: 0.8rem 1rem;
         border-radius: 4px;
-        button,
+        display: flex;
+
+        &-balances {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            span {
+                color: rgba(255, 255, 255, 0.6);
+                font-size: 10px;
+                line-height: 12px;
+                padding-top: 6px;
+            }
+        }
+
+        &-max {
+            cursor: pointer;
+            width: 150px;
+            text-align: center;
+            background: transparent;
+            border: none;
+            outline: none;
+
+            div {
+                color: #00FE81;
+                text-align: center;
+                font-size: 12px;
+                line-height: 15px;
+                font-weight: bold;
+                margin-bottom: 2px;
+            }
+
+            span {
+                color: rgba(255, 255, 255, 0.6);
+                font-size: 10px;
+                line-height: 12px;
+            }
+        }
+
         input {
-            background: var(--bgDeep);
+            // background: var(--bgDeep);
+            background: transparent;
             box-shadow: none;
             border: 0;
             color: var(--faceDeep);
@@ -338,22 +460,25 @@
                 box-shadow: none;
                 outline: none;
             }
+            text-align: center;
+            &::placeholder {
+                color: #fff;
+            }
+            font-size: 12px;
+            line-height: 15px;
+            font-weight: bold;
         }
+
         input {
             width: 150px;
         }
-        button {
-            background: linear-gradient(var(--objPrimary), var(--objDefault));
-            padding: 0.3rem 1rem;
-            border-radius: 4px;
-        }
+
     }
 
     .token-with-balance {
-        // border: 1px solid var(--borderDefault);
         padding: 0rem 1rem;
         flex-grow: 1;
-        // border-radius: 4px;
+
         .token-logo {
             display: inline-flex;
             align-items: center;
@@ -361,12 +486,7 @@
             padding: 0.2rem 0.5rem;
             border-radius: 4px;
             font-size: 1.25rem;
-            // border: 1px solid var(--borderDefault);
-            // background: var(--objDefault);
-            // &:hover {
-            //     cursor: pointer;
-            //     background: var(--objDefault);
-            // }
+
             img {
                 height: 2rem;
                 border-radius: 1rem;
