--- a/packages/client/src/containers/liquidity-container.scss
+++ b/packages/client/src/containers/liquidity-container.scss
@@ -1,5 +1,11 @@
+.liquidity-carousel-item {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
 .liquidity-container {
-    width: 550px;
+    width: 450px;
     min-width: 225px;
     // background: radial-gradient(var(--bgDefault), var(--bgPrimary));
     background: linear-gradient(135deg, var(--bgPrimary), var(--bgDefault));
@@ -7,7 +13,7 @@
 
     border-radius: 8px;
     > div {
-        padding: 1.25rem 1rem;
+        padding: 1.25rem 1.5rem;
     }
 }
 
