--- a/packages/client/src/containers/liquidity-container.scss
+++ b/packages/client/src/containers/liquidity-container.scss
@@ -1,7 +1,8 @@
 .carousel-container {
     width: 650px;
     min-height: 750px;
-    max-height: 800px;
+    max-height: 900px;
+    box-sizing: border-box;
 }
 
 .liquidity-carousel-item {
@@ -9,11 +10,12 @@
     display: flex;
     justify-content: center;
     margin-bottom: 80px;
+    box-sizing: border-box;
 }
 
 .liquidity-container {
     width: 450px;
-    height: 780px;
+    height: 880px;
     min-width: 225px;
     // background: radial-gradient(var(--bgDefault), var(--bgPrimary));
     background: linear-gradient(135deg, var(--bgPrimary), var(--bgDefault));
@@ -21,7 +23,7 @@
 
     border-radius: 8px;
     > div {
-        padding: 1.25rem 1.5rem;
+        // padding: 1.25rem 1.5rem;
     }
 
     &.yellow {
